removed webbrowser, not required

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
 #list of requirements to be installed using pip
-#to run: pip install -r requirements.txt
+#to run: pip install -r requirements.txts
 
 spotipy
 typer
 pandas
-webbrowser
 IPython
