--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 #list of requirements to be installed using pip
 #to run: pip install -r requirements.txts
 
-spotipy
-typer
-pandas
-IPython
+spotipy~=2.23.0
+typer~=0.12.0
+pandas~=2.2.1
+IPython~=8.23.0
+requests~=2.31.0
