Added test for top-tracks functionality retrieving songs and outputting to dataframe.

--- a/.gitignore
+++ b/.gitignore
@@ -152,6 +152,13 @@ dmypy.json
 # Cython debug symbols
 cython_debug/
 
+# Generated cache files
+df.html
+credentials.json
+config.ini
+.vscode/
+.cache/
+
 # PyCharm
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
 #  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
